<resources>
    <string name="app_name">MarketStore</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_name">Name ( required )</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_phone">Phone ( required )</string>
    <string name="login_with_google">Login With Google +</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prompt_email">Email Address</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="Profile">Profile</string>
    <string name="prompt_address">Address ( required )</string>
    <string name="prompt_work">Work</string>
    <string name="title_activity_details">Details</string>
    <string name="add_post">Add post</string>
    <string name="title_activity_add_commnet">AddCommnet</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_comments">no comments availble ...</string>
    <string name="added">Added Successfully</string>
    <string name="will_add">this comment will added when you are online</string>
    <string name="connection">Network connection failed</string>
    <string name="select_pic">Select Picture</string>
    <string name="price">Price Required</string>
    <string name="desc">Description Required</string>
    <string name="start">started following a post</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="google_error">Google Play Services error.</string>
    <string name="name_rq">name required</string>
    <string name="address_rq">address required</string>
    <string name="work_req">work required</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="loading">Loading Data</string>
    <string name="failed">failed</string>
    <string name="start_up">start uploading</string>
    <string name="permission">filed permission</string>
    <string name="cantup">Can\'t logout</string>
    <string name="user_comment">user comment</string>
    <string name="set_comment">set comment</string>
    <string name="things_photos">things photos</string>
    <string name="usrname">user name</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="adaress">adaress</string>
    <string name="work">work</string>
    <string name="productimage">product image</string>
    <string name="profile_image">profile Image</string>
    <string name="call">call image</string>
    <string name="splash_image">splash image</string>
    <string name="price_in_dollar">Price in Dollar</string>
    <string name="comment">comment</string>
    <string name="send">send</string>
    <string name="emailadd">email address</string>
    <string name="phonenum">phone number</string>
    <string name="adaresstext">address</string>
    <string name="workplace">work place</string>
    <string name="add_product">add product</string>
    <string name="comments">comments</string>
    <string name="back_button">back button</string>
    <string name="last_comment_on_last_followed_post">last comment on last followed post</string>
    <string name="last_comment_user_on_last_followed_post">last commented user on last followed post</string>
    <string name="phone_error">phone number error</string>
    <string name="nodata">no data</string>
</resources>
