<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_padding_top"
        android:background="@color/viewColor"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_weight=".1"
    android:layout_margin="@dimen/appbar_padding_top"
    android:layout_height="0dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/h50dp"
        android:id="@+id/profile_image"
        android:src="@drawable/profile_background"
        android:layout_height="@dimen/h50dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h50dp">
    <TextView
    android:id="@+id/name"
    android:textSize="@dimen/text16sp"
    android:textAlignment="textStart"
    android:textColor="#00F"
    android:textStyle="bold"
    android:paddingLeft="@dimen/appbar_padding_top"
        android:paddingRight="@dimen/appbar_padding_top"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dim30dp" />
        <TextView
            android:id="@+id/date"
            android:textSize="@dimen/text16sp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:paddingLeft="@dimen/appbar_padding_top"
            android:paddingRight="@dimen/appbar_padding_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim30dp" />
    </LinearLayout>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view1dp"
        android:background="@color/viewColor"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight=".8"
        android:layout_height="0dp">
    <ImageView
        android:id="@+id/image_home"
        android:scaleType="fitXY"
        android:contentDescription="@string/productimage"
        android:transitionName="mytest"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
         />
        <LinearLayout
            android:background="@color/viewColor"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/appbar_padding_top"
                    android:padding="@dimen/appbar_padding_top"
                    android:background="@color/red"
                    android:textColor="@color/backgroundWhite"
                    android:textSize="@dimen/text16sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view1dp"
        android:background="@color/viewColor"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:text="@string/follow"
            android:layout_margin="@dimen/appbar_padding_top"
            android:id="@+id/follow"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:text="@string/comment"
            android:layout_margin="@dimen/appbar_padding_top"
            android:id="@+id/comment"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>