<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context="com.example.mohamedabdelaziz.marketstore.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:id="@+id/mainScroll"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="fitXY"
                    android:contentDescription="@string/profile_image"
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/img320h" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/appbar_padding_top"
                    android:textAlignment="center"
                    android:textColor="@color/backgroundWhite"
                    android:background="@color/viewColor"
                    android:textStyle="bold"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="@dimen/text16sp"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:id="@+id/email"
                android:padding="@dimen/appbar_padding_top"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/call_layout"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="@dimen/appbar_padding_top"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/call_me"
                    android:layout_width="@dimen/dim28dp"
                    android:contentDescription="@string/call"
                    android:layout_height="@dimen/dim24" />
                <TextView
                    android:id="@+id/phone"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/work"
                android:padding="@dimen/appbar_padding_top"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/address"
                android:padding="@dimen/appbar_padding_top"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/ProfileRecycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:src="@drawable/back_button"
        app:fabSize="mini"
        android:contentDescription="@string/back_button"
        android:onClick="finishActivity"
        android:layout_margin="@dimen/appbar_padding_top"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>
